Editmode overlay [wireframe, vertices etc] completely covered by geometry in multiple selection objects in edit mode with 'In Front' option enabled #77424

Closed
opened 2020-06-05 09:45:27 +02:00 by Eric Seigaud · 10 comments

System Information
Operating system: Linux-5.5.13-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64

Window 7 64 bit
Nvidia graphic card

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-05 08:57, hash: 5e55153c89, also 2.83 release
Worked: c476c36e4008^ -- Caused by c476c36e40

Multipleselection_no Front option_OFF.jpg

Multipleselection_Front option_ON.jpg

Short description of error

With "front" option on object it's impossible to see the vertex face and edges in edit mode with multiple selection (2 and more object).
It work with only one selected object and works when the "front" option is disabled.

Exact steps for others to reproduce the error

  • create 2 objects
  • enable front option
  • Select the 2 objects go to edit mode
    • no wire visible impossible to see vertex edge and face. The selection work.

#77424.blend

Remove "in front" option,repeat the operation it work.
Thank by advance for your advice or correction.

**System Information** Operating system: Linux-5.5.13-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64 Window 7 64 bit Nvidia graphic card **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-05 08:57, hash: `5e55153c89`, also 2.83 release Worked: c476c36e4008^ -- Caused by c476c36e40 ![Multipleselection_no Front option_OFF.jpg](https://archive.blender.org/developer/F8578575/Multipleselection_no_Front_option_OFF.jpg) ![Multipleselection_Front option_ON.jpg](https://archive.blender.org/developer/F8578574/Multipleselection_Front_option_ON.jpg) **Short description of error** With "front" option on object it's impossible to see the vertex face and edges in edit mode with multiple selection (2 and more object). It work with only one selected object and works when the "front" option is disabled. **Exact steps for others to reproduce the error** - create 2 objects - enable front option - Select the 2 objects go to edit mode - > no wire visible impossible to see vertex edge and face. The selection work. [#77424.blend](https://archive.blender.org/developer/F8578734/T77424.blend) Remove "in front" option,repeat the operation it work. Thank by advance for your advice or correction.
Author

Added subscriber: @ericsego

Added subscriber: @ericsego
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, bisecting...

Can confirm, bisecting...
Philipp Oeser changed title from Impossible to see vertex edge ect in multiple selection objects in edit mode with front option enabled to Impossible to see vertex edge etc in multiple selection objects in edit mode with front option enabled 2020-06-05 11:06:59 +02:00
Philipp Oeser changed title from Impossible to see vertex edge etc in multiple selection objects in edit mode with front option enabled to Editmode overlay [wireframe, vertices etc] completely covered by geometry in multiple selection objects in edit mode with 'In Front' option enabled 2020-06-05 11:15:08 +02:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Caused by c476c36e40

CC @fclem

Caused by c476c36e40 CC @fclem

Added subscriber: @dfelinto

Added subscriber: @dfelinto

This is a regression, yet it is no showstopper. It will likely tackled for 2.91 instead. (leaving it tagged as 2.90 still for now).

This is a regression, yet it is no showstopper. It will likely tackled for 2.91 instead. (leaving it tagged as 2.90 still for now).

This issue was referenced by 54b3168c4a

This issue was referenced by 54b3168c4ad07bb2d3c7aade342b45c0dec34181

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-08-12 19:57:40 +02:00
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:27:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77424
No description provided.