Fix T77424 Overlay: Editmode: Issue with multi edit and in-front option

This is a nice addition to the refactor. Now any combination of in-front
/ not in-front will work in non x-ray edit mode.